now should be good

--- a/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
@@ -80,7 +80,7 @@
 
 - type: entity
   name: tall cabinet
-  parent: FilingCabinet
+  parent: BaseFilingCabinet
   id: filingCabinetTall
   components:
   - type: Sprite
